--- a/app/src/main/jni/CMakeLists.txt
+++ b/app/src/main/jni/CMakeLists.txt
@@ -2,23 +2,20 @@ project(nanodetncnn)
 
 cmake_minimum_required(VERSION 3.10)
 
-set(OpenCV_DIR ${CMAKE_SOURCE_DIR}/opencv-mobile-4.5.1-android/sdk/native/jni)
+set(OpenCV_DIR ${CMAKE_SOURCE_DIR}/opencv-mobile-4.8.0-android/sdk/native/jni)
 find_package(OpenCV REQUIRED core imgproc)
 
-# nanodet
-#set(ncnn_DIR ${CMAKE_SOURCE_DIR}/ncnn-20220420-android/${ANDROID_ABI}/lib/cmake/ncnn)
-#find_package(ncnn REQUIRED)
+set(ncnn_DIR ${CMAKE_SOURCE_DIR}/ncnn-20230816-android/${ANDROID_ABI}/lib/cmake/ncnn)
+find_package(ncnn REQUIRED)
 
+# you could edit
+# detection -  nanodet
 #add_library(nanodetncnn SHARED nanodetncnn.cpp nanodet.cpp)
 #target_link_libraries(nanodetncnn ncnn ${OpenCV_LIBS} mediandk)
 
 # segmentation - yolov8
-add_library(ncnnyolov8 SHARED yolov8ncnn.cpp yolov8.cpp)
-target_link_libraries(ncnnyolov8 ncnn ${OpenCV_LIBS} mediandk)
+#add_library(ncnnyolov8 SHARED yolov8ncnn.cpp yolov8.cpp)
+#target_link_libraries(ncnnyolov8 ncnn ${OpenCV_LIBS} mediandk)
 
-# detection - yolov5
-#set(ncnn_DIR${CMAKE_SOURCE_DIR}/ncnn-20201218-android/${ANDROID_ABI}/lib/cmake/ncnn)
-#find_package(ncnn REQUIRED)
-#
-#add_library(ncnnyolov5 SHARED yolov5ncnn.cpp yolov5.cpp)
-#target_link_libraries(ncnnyolov5 ncnn ${OpenCV_LIBS} mediandk jnigraphics)
+add_library(ncnntotal SHARED ncnn.cpp nanodet.cpp yolov8.cpp)
+target_link_libraries(ncnntotal ncnn ${OpenCV_LIBS} mediandk)
