--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,4 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+tasks.register('clean', Delete) {delete rootProject.buildDir}
