--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,9 @@ dependencies {
 
     implementation 'com.google.protobuf:protobuf-java:3.19.3'
 
-    testImplementation 'junit:junit:'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+//    testImplementation 'junit:junit:'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
 protobuf {
